# maize

./: Cargo.toml  README.md  docker_run.sh
crates/maize_cob/: Cargo.toml
crates/maize_cob/src/: lib.rs
crates/maize_core/: Cargo.toml
crates/maize_core/src/: lib.rs
crates/maize_py/: Cargo.toml  pyproject.toml
crates/maize_py/python/maize/: __init__.py  _bindings.pyi
crates/maize_py/python/maize/tile/: __init__.py
crates/maize_py/src/: dtype.rs  lib.rs  shape.rs  stride.rs  tile.rs  tuple.rs
crates/maize_tile/: Cargo.toml
crates/maize_tile/src/: lane_to_coord.rs  lib.rs  (+1 more)
crates/rtc_core/: Cargo.toml  debug_ptx  tmp.ptx
crates/rtc_tile/: Cargo.toml
crates/rtc_types/: Cargo.toml
crates/rtc_types/src/: lib.rs
crates/rtc_types/src/codegen/: calling_convention.rs  if_stmt.rs  instruction_opt.rs  loops.rs  mod.rs  typed_func.rs
crates/rtc_types/src/codegen/target_cpu/: cuda.rs
crates/rtc_types/src/intrinsics/: abs.rs  cuda.rs  mod.rs  transcendental.rs  vector.rs
crates/rtc_types/src/intrinsics/cuda/: cp_async.rs  ldsm.rs  mod.rs  sreg.rs
crates/rtc_types/src/ty/: args.rs  arithmetic.rs  bitcast.rs  bool.rs  contiguous.rs  convertible.rs  float.rs  func.rs  int.rs  mod.rs  printable.rs  ptr.rs  raw.rs  sized.rs  struct_ty.rs  vec.rs  void.rs
crates/rtc_types/src/ty/cuda/: mod.rs
crates/rtc_types/src/val/: array.rs  assert.rs  cmp.rs  const_val.rs  mod.rs  ptr.rs  std_ops.rs  vec.rs
example_ptx/: gen.ptx
media/: building_llvm.md  ideas_for_the_future.md  motivation.md  overview.md  performance.md  upholding_safety.md
src/: main.rs
(+135 files in other folders)
