[package]
name = "rtc_types"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { path = "../../../inkwell", features = [ "target-nvptx", "llvm22-1" ] }
# It doesn't support llvm-sys 22.1 yet!
# inkwell = { version = "0.8.0", default-features = false, features = ["target-nvptx", "llvm21-1"] }
